src/index.css
@import "tailwindcss";
@custom-variant dark (&:where(.dark, .dark *));

@font-face {
  font-family: "Rubik";
  font-style: normal;
  font-weight: 100 900;
  src: url(./assets/fonts/Rubik-VariableFont_wght.ttf) format("truetype");
}

@font-face {
  font-family: "Rubik";
  font-style: italic;
  font-weight: 100 900;
  src: url(./assets/fonts/Rubik-Italic-VariableFont_wght.ttf) format("truetype");
}

@layer base {
  html {
    font-family: "Rubik", sans-serif;
    background-color: var(--color-grey-50);
    @apply bg-[url(../public/assets/images/pattern-background-mobile-light.svg)] bg-cover bg-no-repeat sm:bg-[url(../public/assets/images/pattern-background-tablet-light.svg)] xl:bg-[url(../public/assets/images/pattern-background-desktop-light.svg)] dark:bg-blue-900 dark:bg-[url(../public/assets/images/pattern-background-mobile-dark.svg)] dark:sm:bg-[url(../public/assets/images/pattern-background-tablet-dark.svg)] dark:xl:bg-[url(../public/assets/images/pattern-background-desktop-dark.svg)];
  }

  progress {
    @apply p-1 rounded-2xl;
    -webkit-appearance: none;
    background-color: var(--color-white);
    max-height: 1rem;
  }
  ::-webkit-progress-value {
    background-color: var(--color-purple-600);
    @apply rounded-2xl;
  }
  ::-webkit-progress-bar {
    background-color: var(--color-white);
    @apply rounded-2xl;
  }
  ::-moz-progress-bar {
    background-color: var(--color-purple-600);
    @apply rounded-2xl;
  }

  input[type="checkbox"] {
    opacity: 0;
    width: 0;
    height: 0;
  }

  .switch {
    @apply h-5 w-8 sm:h-7 sm:w-12;
    position: relative;
    display: inline-block;
    flex-shrink: 0;
  }

  .slider {
    @apply rounded-full;
    position: absolute;
    cursor: pointer;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background-color: var(--color-purple-600);
    -webkit-transition: 0.4s;
    transition: 0.4s;
  }

  .slider:before {
    @apply h-3 w-3 rounded-full sm:h-5 sm:w-5;
    position: absolute;
    content: "";
    left: 4px;
    bottom: 4px;
    background-color: var(--color-white);
    -webkit-transition: 0.4s;
    transition: 0.4s;
  }

  input:checked + .slider {
    @apply bg-purple-600;
  }

  input:focus + .slider {
    @apply outline-2 dark:outline-white;
  }

  input:checked + .slider:before {
    @apply transform-[translateX(12px)] sm:transform-[translateX(20px)];
  }
}

@theme {
  --color-white: hsl(0, 100%, 100%);
  --color-black: hsl(0, 0%, 0%);
  --color-grey-50: hsl(220, 38%, 97%);
  --color-grey-500: hsl(219, 13%, 44%);
  --color-blue-50: hsl(225, 100%, 96%);
  --color-blue-100: hsl(220, 50%, 95%);
  --color-blue-300: hsl(216, 47%, 78%);
  --color-blue-500: hsl(223, 100%, 59%);
  --color-blue-850: hsl(215, 27%, 32%);
  --color-blue-900: hsl(216, 25%, 25%);
  --color-blue-950: hsl(214, 24%, 23%);
  --color-green-100: hsl(151, 88%, 94%);
  --color-green-500: hsl(151, 68%, 52%);
  --color-purple-100: hsl(278, 100%, 95%);
  --color-purple-600: hsl(277, 91%, 56%);
  --color-orange-50: hsl(27, 100%, 96%);
  --color-orange-400: hsl(22, 100%, 60%);
  --color-red-500: hsl(0, 82%, 63%);
}

@utility text-preset-1 {
  font-weight: 500;
  font-size: 9rem;
  line-height: 1;
  letter-spacing: 0px;
}
@utility text-preset-1-mobile {
  font-weight: 500;
  font-size: 5.5rem;
  line-height: 1;
  letter-spacing: 0px;
}
@utility text-preset-2-medium {
  font-weight: 500;
  font-size: 4rem;
  line-height: 1;
  letter-spacing: 0px;
}
@utility text-preset-2-medium-mobile {
  font-weight: 500;
  font-size: 2.5rem;
  line-height: 1;
  letter-spacing: 0px;
}
@utility text-preset-2-light {
  font-weight: 300;
  font-size: 4rem;
  line-height: 1;
  letter-spacing: 0px;
}
@utility text-preset-2-light-mobile {
  font-weight: 300;
  font-size: 2.5rem;
  line-height: 1;
  letter-spacing: 0px;
}
@utility text-preset-3 {
  font-weight: 500;
  font-size: 2.25rem;
  line-height: 1.2;
  letter-spacing: 0px;
}
@utility text-preset-3-mobile {
  font-weight: 500;
  font-size: 1.25rem;
  line-height: 1.2;
  letter-spacing: 0px;
}
@utility text-preset-4 {
  font-weight: 500;
  font-size: 1.75rem;
  line-height: 1;
  letter-spacing: 0px;
}
@utility text-preset-4-mobile {
  font-weight: 500;
  font-size: 1.125rem;
  line-height: 1;
  letter-spacing: 0px;
}
@utility text-preset-5-medium {
  font-weight: 500;
  font-size: 1.5rem;
  line-height: 1.5;
  letter-spacing: 0px;
}
@utility text-preset-5-regular {
  font-weight: 400;
  font-size: 1.5rem;
  line-height: 1.5;
  letter-spacing: 0px;
}
@utility text-preset-5-mobile {
  font-style: italic;
  font-size: 0.875rem;
  line-height: 1.5;
  letter-spacing: 0px;
}
@utility text-preset-6 {
  font-style: italic;
  font-size: 1.25rem;
  line-height: 1.5;
  letter-spacing: 0px;
}

@utility option-item-focus {
  @apply focus:outline-purple-600 focus-visible:outline-2 focus-visible:outline-purple-600 active:outline-2 active:outline-purple-600;
}

@layer components {
  .option-item {
    @apply flex w-full cursor-pointer items-center gap-4 rounded-[0.75rem] bg-white p-4 text-start option-item-focus sm:gap-8 sm:rounded-3xl xl:p-6 dark:bg-blue-850;
  }

  .option-shadow {
    @apply shadow-[0_16px_40px_rgba(143,160,193,0.14)];
  }

  .form-button {
    @apply flex w-full cursor-pointer justify-center rounded-xl bg-purple-600 p-4 text-preset-4-mobile text-white focus:opacity-50 sm:rounded-3xl sm:p-8 sm:text-preset-4;
  }

  .answer-item {
    @apply grid min-h-[4.5rem] w-full cursor-pointer grid-cols-[1fr_4fr_1fr] gap-2  rounded-[0.75rem] bg-white p-4 text-start focus:outline-2 focus:outline-purple-600 focus-visible:outline-2 focus-visible:outline-purple-600 active:outline-2 active:outline-purple-600 sm:rounded-3xl dark:bg-blue-850;
  }

  .answer-letter {
    @apply h-10 w-10 place-content-center place-self-center rounded-lg p-2 text-center text-preset-4-mobile sm:h-full sm:w-fit sm:rounded-xl sm:p-4 sm:text-preset-4;
  }

  .answer-letter-correct {
    @apply bg-green-500 text-white;
  }

  .answer-letter-incorrect {
    @apply bg-red-500 text-white;
  }

  .answer-letter-selected {
    @apply bg-purple-600 text-white;
  }

  .answer-letter-not-selected {
    @apply bg-grey-50 text-grey-500;
  }

  .answer-letter-default {
    @apply bg-grey-50 text-grey-500 group-focus-within:bg-purple-600 group-focus-within:text-white;
  }

  .answer-outline-incorrect {
    @apply outline-2 outline-red-500;
  }

  .answer-outline-correct {
    @apply outline-2 outline-green-500;
  }

  .answer-outline-selected {
    @apply outline-2 outline-purple-500;
  }

  .answer-outline-default {
    @apply focus-within:outline-2 focus-within:outline-purple-500;
  }

  .answer-content {
    @apply grow self-center text-preset-4-mobile text-blue-900 sm:text-preset-4;
  }

  .results-card {
    @apply mb-4 flex flex-col items-center gap-4 rounded-xl bg-white p-8 sm:mb-8 sm:rounded-3xl sm:p-12 dark:bg-blue-850;
  }

  .toggle-icon {
    @apply w-4 h-4 sm:w-6 sm:h-6;
  }
}

